Web MVC Api(project changed to class library) with DTOs classes

--- a/MotornaVozila/MotornaVozila.csproj
+++ b/MotornaVozila/MotornaVozila.csproj
@@ -65,7 +65,6 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataLayer.cs" />
-    <Compile Include="DataProvider.cs" />
     <Compile Include="Forms\Dodaj_nEkonomistu.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -194,7 +193,9 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="DataProviders\" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
